# rust-interopt

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  build.sh  cbindgen.toml
.devcontainer/: devcontainer.json
app/: CMakeLists.txt  main.cpp
lib/: Cargo.toml  build.rs
lib/src/: lib.rs
src/: lib.rs  main.cpp
