[package]
name = "demo"
version = "0.1.0"
edition = "2024"
description = "Bibliote de demonstração para teste de interoperabilidade com C."
authors = [
            "Luciano Vieira Rodrigues <luciano@codesolver.com.br>",
        ]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

[build-dependencies]
cbindgen = "0.29.0"